feat: added find by name to doi service, closes #508
Signed-off-by: Samir Romdhani <samir.romdhani_externe@rte-france.com>